// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminDashboard > matches snapshot 1`] = `
<div>
  <h2>
    Admin Dashboard
  </h2>
  <div>
    <h3>
      Projects
    </h3>
    <p>
      Loading...
    </p>
    <button
      class="btn btn--primary"
    >
      + New Project
    </button>
    <ul />
  </div>
  <div>
    <h3>
      Resources
    </h3>
    <p>
      Loading...
    </p>
    <button
      class="btn btn--primary"
    >
      + New Resource
    </button>
    <ul />
  </div>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;

exports[`ConstructionDashboard > matches snapshot 1`] = `
<div>
  <h2>
    Construction Dashboard
  </h2>
  <p>
    Welcome, 
    Construction User
    !
  </p>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;

exports[`DashboardSwitcher > matches snapshot 1`] = `
<div>
  <h2>
    User Dashboard
  </h2>
  <p>
    Welcome, 
    Test User
    !
  </p>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;

exports[`FinanceDashboard > matches snapshot 1`] = `
<div>
  <h2>
    Finance Dashboard
  </h2>
  <p>
    Welcome, 
    Finance User
    !
  </p>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;

exports[`SupervisorDashboard > matches snapshot 1`] = `
<div>
  <h2>
    Supervisor Dashboard
  </h2>
  <div>
    <h3>
      Projects
    </h3>
    <p>
      Loading...
    </p>
    <button
      class="btn btn--primary"
    >
      + New Project
    </button>
    <ul />
  </div>
  <div>
    <h3>
      Resources
    </h3>
    <p>
      Loading...
    </p>
    <button
      class="btn btn--primary"
    >
      + New Resource
    </button>
    <ul />
  </div>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;

exports[`UserDashboard > matches snapshot 1`] = `
<div>
  <h2>
    User Dashboard
  </h2>
  <p>
    Welcome, 
    Test User
    !
  </p>
  <button
    class="btn btn--secondary"
  >
    Logout
  </button>
</div>
`;
